--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -16,7 +16,7 @@
     </div>
 
     <div class= "field">
-        <%= f.label "Id Vendedor" %><br>
+        <%= f.label "Id Vendedores" %><br>
         <%= f.text_field :seller_id %>
     </div>
 
